completed auth functionality features
