# src/Api/Entities/Authentication.php
@@ -1,0 +1,9 @@
+<?php
+
+namespace User\Api\Entities;
+
+class Authentication extends \User\Api\GeneratedEntities\GeneratedAuthentication
+{
+
+
+}
